# mcp_gateway

./: .gitignore  __init__.py  main.py  pyproject.toml  readme.md
api/: __init__.py  admin.py  mcp.py
core/: __init__.py  cache.py  config.py  dependencies.py  logging.py
models/: schemas.py
services/: __init__.py  invocation_stats.py  rate_limit.py  registry.py  token_check.py
tests/: demo_mcp_server.py  mcp_test.py
