[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "基于 FastAPI 的 MCP Server 反向代理网关，将多个分散的 MCP Server 聚合为统一入口，提供鉴权、限流、调用统计和热更新能力。"
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "motor>=3.7.0",
    "pymongo>=4.17.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "fastmcp>=3.4.0"
]

[project.optional-dependencies]
test = [
    "fastmcp>=3.4.0",
]

[project.scripts]
mcp-gateway = "main:create_app"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models", "services"]
